fix: delete arrow in input on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ button:active {
   outline: none;
 }
 
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 select:focus,
 select:hover,
 option:hover,
