--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -17,7 +17,9 @@ button:focus,
 button:active {
   outline: none;
 }
-
+input[type='number'] {
+  -moz-appearance: textfield;
+}
 select:focus,
 select:hover,
 option:hover,
